--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
       font-size: 14px;
     }
   </style>
+  <style>
+    /* ... (Todo el estilo ya incluido anteriormente) ... */
+  </style>
 </head>
 <body>
 
@@ -169,6 +172,13 @@
     <div id="otraVez" style="display: none;">
       <a href="" onclick="location.reload()">Registrar otro traslado</a>
     </div>
+
+    <div id="iosInstructions">
+      📱 Para instalar esta app:<br>
+      1. Abre este sitio en Safari<br>
+      2. Toca el ícono de compartir (cuadro con flecha)<br>
+      3. Selecciona <b>“Agregar a pantalla de inicio”</b>
+    </div>
   </div>
 
   <div id="installBanner">
@@ -177,12 +187,104 @@
   </div>
 
   <script>
-    let deferredPrompt;
+    const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSeMlTm89RoSK6dyGnUJ0TxSIed3n_lXElQFgP8dSMaub_WS_A/formResponse";
+    const entryCedula = "entry.668942367";
+    const entryUbicacion = "entry.981761500";
+    const entryIDJefe = "entry.817016646";
+    const entryQR = "entry.256825743";
+    let ubicacionActual = "NO DISPONIBLE";
 
-    window.addEventListener('beforeinstallprompt', (e) => {
+    navigator.geolocation.getCurrentPosition(
+      pos => {
+        const lat = pos.coords.latitude.toFixed(6);
+        const lng = pos.coords.longitude.toFixed(6);
+        ubicacionActual = `${lat}, ${lng}`;
+      },
+      err => console.warn("No se pudo obtener ubicación.")
+    );
+
+    async function solicitarCamara() {
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+        stream.getTracks().forEach(track => track.stop());
+        return true;
+      } catch {
+        return false;
+      }
+    }
+
+    async function iniciarEscaneo() {
+      const cedula = document.getElementById("cedula").value.trim();
+      const id_jefe = document.getElementById("id_jefe").value.trim();
+      if (!cedula || !id_jefe) return alert("Completa todos los campos");
+
+      const tieneCamara = await solicitarCamara();
+      if (!tieneCamara) return alert("No se pudo acceder a la cámara");
+
+      document.getElementById("reader").style.display = "block";
+      const qrScanner = new Html5Qrcode("reader");
+      qrScanner.start(
+        { facingMode: "environment" },
+        { fps: 10, qrbox: 250 },
+        qrData => {
+          qrScanner.stop();
+          document.getElementById("reader").style.display = "none";
+
+          const formData = new FormData();
+          formData.append(entryCedula, cedula);
+          formData.append(entryIDJefe, id_jefe);
+          formData.append(entryQR, qrData);
+          formData.append(entryUbicacion, ubicacionActual);
+
+          if (navigator.onLine) {
+            fetch(formURL, { method: "POST", mode: "no-cors", body: formData })
+              .then(() => mostrarExito("✔️ Registrado con éxito."))
+              .catch(() => guardarLocal(cedula, id_jefe, qrData));
+          } else {
+            guardarLocal(cedula, id_jefe, qrData);
+          }
+        }
+      );
+    }
+
+    function guardarLocal(cedula, id_jefe, qr) {
+      const data = { cedula, id_jefe, qr, ubicacion: ubicacionActual, fecha: new Date().toISOString() };
+      let registros = JSON.parse(localStorage.getItem("registrosOffline")) || [];
+      registros.push(data);
+      localStorage.setItem("registrosOffline", JSON.stringify(registros));
+      mostrarExito("📴 Sin conexión. Guardado localmente.");
+    }
+
+    function mostrarExito(mensaje) {
+      document.getElementById("resultado").innerText = mensaje;
+      document.getElementById("btnRegistrar").disabled = true;
+      document.getElementById("btnRegistrar").innerText = "✔ Registrado";
+      document.getElementById("otraVez").style.display = "block";
+    }
+
+    function enviarPendientes() {
+      let registros = JSON.parse(localStorage.getItem("registrosOffline")) || [];
+      registros.forEach((r, i) => {
+        const formData = new FormData();
+        formData.append(entryCedula, r.cedula);
+        formData.append(entryIDJefe, r.id_jefe);
+        formData.append(entryQR, r.qr);
+        formData.append(entryUbicacion, r.ubicacion);
+        fetch(formURL, { method: "POST", mode: "no-cors", body: formData })
+          .then(() => {
+            registros.splice(i, 1);
+            localStorage.setItem("registrosOffline", JSON.stringify(registros));
+          })
+          .catch(console.error);
+      });
+    }
+
+    // Banner Android
+    let deferredPrompt;
+    window.addEventListener("beforeinstallprompt", (e) => {
       e.preventDefault();
       deferredPrompt = e;
-      document.getElementById('installBanner').style.display = 'block';
+      document.getElementById("installBanner").style.display = "block";
     });
 
     function instalarApp() {
@@ -190,21 +292,32 @@
         deferredPrompt.prompt();
         deferredPrompt.userChoice.then(() => {
           deferredPrompt = null;
-          document.getElementById('installBanner').style.display = 'none';
+          document.getElementById("installBanner").style.display = "none";
         });
       }
     }
-  </script>
 
-  <script>
-    // ... tu lógica de escaneo y sincronización aquí (omitida por brevedad)
-  </script>
+    // iOS detection
+    function esIOS() {
+      return /iphone|ipad|ipod/i.test(navigator.userAgent);
+    }
 
-  <script>
+    function esPWA() {
+      return window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone === true;
+    }
+
+    document.addEventListener("DOMContentLoaded", () => {
+      if (esIOS() && !esPWA()) {
+        document.getElementById("iosInstructions").style.display = "block";
+      }
+      enviarPendientes();
+    });
+
+    // Registrar service worker
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
-        .then(reg => console.log('✅ Service Worker registrado:', reg.scope))
-        .catch(err => console.error('❌ Error al registrar SW:', err));
+        .then(reg => console.log("✅ SW registrado", reg.scope))
+        .catch(err => console.error("❌ Error SW", err));
     }
   </script>
 </body>
